@@ -9,10 +9,13 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.kafka.test.context.EmbeddedKafka;
 import org.springframework.test.annotation.DirtiesContext;
+import org.springframework.test.context.TestPropertySource;
 import org.testcontainers.shaded.org.apache.commons.io.IOUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.charset.StandardCharsets;
 
 @SpringBootTest(classes = {SpringwolfApplication.class}, webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
@@ -21,6 +24,7 @@ import java.nio.charset.StandardCharsets;
         "listeners=PLAINTEXT://localhost:9092",
         "port=9092",
 })
+@TestPropertySource(properties = "springwolf.plugin.kafka.publishing.enabled=false") // baeldung spring kafka does not match springwolf kafka
 @DirtiesContext
 public class ApiIntegrationTest {
 
@@ -28,13 +32,16 @@ public class ApiIntegrationTest {
     private TestRestTemplate restTemplate;
 
     @Test
-    public void asyncApiResourceArtifactTest() throws JSONException, IOException {
+    public void asyncApiArtifactTest() throws JSONException, IOException {
         // given
         InputStream s = this.getClass().getResourceAsStream("/asyncapi.json");
-        String expected = IOUtils.toString(s, StandardCharsets.UTF_8);
+        String expected = new String(s.readAllBytes(), StandardCharsets.UTF_8).trim();
 
-        String url = "/springwolf/docs";
-        String actual = restTemplate.getForObject(url, String.class);
+        // when
+        String actual = restTemplate.getForObject("/springwolf/docs", String.class);
+
+        // then
+        Files.writeString(Path.of("src", "test", "resources", "asyncapi.actual.json"), actual);
 
         JSONAssert.assertEquals(expected, actual, JSONCompareMode.STRICT);
     }
